--- a/Resources/Public/Css/main.css
+++ b/Resources/Public/Css/main.css
@@ -1,7 +1,3 @@
-body {
-	overflow: hidden;
-}
-
 canvas {
 	width: 100% !important;
 	height: auto !important;
@@ -11,6 +7,8 @@ canvas {
 	display: none;
 	max-width: 100% !important;
 	z-index: 99;
+	top: 0 !important;
+	left: 0 !important;
 }
 
 .progress {
@@ -28,18 +26,12 @@ canvas {
 	background-color: #5cb85c;
 	width: 0;
 	height: 20px;
-}
-
-.magazine-viewport {
-	position: relative;
+	transition: 0.1s;
 }
 
 .magazine-viewport .container{
-	position:absolute;
 	top:50%;
 	left:50%;
-	width:922px;
-	height:600px;
 	margin:auto;
 }
 
@@ -152,13 +144,9 @@ canvas {
 	background-image:url(../Icons/loader.gif);
 	width:22px;
 	height:22px;
-	position:absolute;
-	top:50%;
-	left:50%;
 }
 
 .magazine-viewport .shadow{
-	width: 100%;
 	-webkit-transition: -webkit-box-shadow 0.5s;
 	-moz-transition: -moz-box-shadow 0.5s;
 	-o-transition: -webkit-box-shadow 0.5s;
@@ -175,8 +163,6 @@ canvas {
 .magazine-viewport .previous-button{
 	width:22px;
 	height:600px;
-	position:absolute;
-	top:0;
 }
 
 .magazine-viewport .next-button{
@@ -204,7 +190,7 @@ canvas {
 
 .magazine-viewport .previous-button-hover,
 .magazine-viewport .previous-button-down{
-	background-image:url(../pics/arrows.png);
+	background-image:url(../Icons/arrows.png);
 	background-position:-4px 284px;
 	background-repeat:no-repeat;
 }
@@ -216,7 +202,7 @@ canvas {
 
 .magazine-viewport .next-button-hover,
 .magazine-viewport .next-button-down{
-	background-image:url(../pics/arrows.png);
+	background-image:url(../Icons/arrows.png);
 	background-position:-38px 284px;
 	background-repeat:no-repeat;
 }
@@ -381,7 +367,7 @@ canvas {
 	height:22px;
 	top:10px;
 	right:10px;
-	background-image:url(../pics/zoom-icons.png);
+	background-image:url(../Icons/zoom-icons.png);
 	background-size:88px 22px;
 }
 
