--- a/Resources/Private/Templates/Ebook/List.html
+++ b/Resources/Private/Templates/Ebook/List.html
@@ -4,16 +4,16 @@
 
 	<f:flashMessages />
 
-	<div class="zoom-icon zoom-icon-in"></div>
-
 	<div class="magazine-viewport">
 		<h2 class="heading teaser"><span>{ebook.header}</span></h2>
 		<div class="progress">
 			<div class="progress-bar"></div>
 		</div>
 		<div class="container">
-			<div class="magazine" id="viewer">
-
+			<div class="magazine" id="viewer" data-scale="{ebook.scale}">
+				<f:if condition="{ebook.image}">
+					<div class="hard"><f:image src="uploads/tx_szebook/{ebook.image}" /></div>
+				</f:if>
 			</div>
 		</div>
 	</div>
