--- a/Resources/Public/Css/main.css
+++ b/Resources/Public/Css/main.css
@@ -1,14 +1,6 @@
-canvas {
-	width: 100% !important;
-	height: auto !important;
-}
-
 #viewer {
 	display: none;
-	max-width: 100% !important;
 	z-index: 99;
-	top: 0 !important;
-	left: 0 !important;
 }
 
 .progress {
@@ -27,6 +19,10 @@ canvas {
 	width: 0;
 	height: 20px;
 	transition: 0.1s;
+}
+
+.magazine-viewport {
+	overflow: visible !important;
 }
 
 .magazine-viewport .container{
