--- a/Resources/Private/Templates/Ebook/Show.html
+++ b/Resources/Private/Templates/Ebook/Show.html
@@ -10,18 +10,12 @@
 			<div class="progress-bar"></div>
 		</div>
 		<div class="container">
-			<div class="magazine" id="viewer" data-scale="{ebook.scale}">
+			<div class="magazine" id="viewer" data-scale="{ebook.scale}" data-pdf="/{pdf.originalResource.publicUrl}">
 				<f:if condition="{image}">
 					<div class="hard"><f:image image="{image}" /></div>
 				</f:if>
 			</div>
 		</div>
 	</div>
-
-	<script>
-		PDFJS.workerSrc = '/typo3conf/ext/sz_ebook/Resources/Public/Js/pdf/worker_loader.js';
-		var pdfWithFormsPath = '/{pdf.originalResource.publicUrl}';
-	</script>
-	<script src="/typo3conf/ext/sz_ebook/Resources/Public/Js/pdf/forms.js"></script>
 
 </f:section>
